compilersintactic_clean.output
State 304 conflicts: 5 shift/reduce
State 305 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration
    2        | initialization
    3        | asignation
    4        | if
    5        | while
    6        | do-while
    7        | for
    8        | switch
    9        | try-catch
   10        | function
   11        | program declaration
   12        | program initialization
   13        | program asignation
   14        | program if
   15        | program while
   16        | program do-while
   17        | program for
   18        | program switch
   19        | program try-catch
   20        | program function

   21 value: DIG
   22      | FLT
   23      | reduction
   24      | element
   25      | LPAREN value RPAREN
   26      | value PLUS value
   27      | value MINUS value
   28      | value MULT value
   29      | value DIV value
   30      | value MOD value

   31 element: IFR LBRACKET DIG RBRACKET
   32        | IFR LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET

   33 reduction: SUM LPAREN IFR RPAREN
   34          | PROD LPAREN IFR RPAREN
   35          | MAX LPAREN IFR RPAREN
   36          | MIN LPAREN IFR RPAREN
   37          | SUM LPAREN IFR LBRACKET DIG RBRACKET RPAREN
   38          | PROD LPAREN IFR LBRACKET DIG RBRACKET RPAREN
   39          | MAX LPAREN IFR LBRACKET DIG RBRACKET RPAREN
   40          | MIN LPAREN IFR LBRACKET DIG RBRACKET RPAREN

   41 boolean: TRUE
   42        | FALSE

   43 declaration: STR IFR COL
   44            | INT IFR COL
   45            | DEC IFR COL
   46            | BOOLEAN IFR COL
   47            | DEC IFR LBRACKET DIG RBRACKET COL
   48            | DEC IFR LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET COL

   49 initialization: STR IFR ASSIGN STG COL
   50               | INT IFR ASSIGN DIG COL
   51               | DEC IFR ASSIGN FLT COL
   52               | BOOLEAN IFR ASSIGN TRUE COL
   53               | BOOLEAN IFR ASSIGN FALSE COL
   54               | INT IFR ASSIGN operation_int COL
   55               | DEC IFR ASSIGN operation_float COL

   56 asignation: IFR ASSIGN STG COL
   57           | IFR ASSIGN element COL
   58           | IFR ASSIGN DIG COL
   59           | IFR ASSIGN FLT COL
   60           | IFR ASSIGN TRUE COL
   61           | IFR ASSIGN FALSE COL
   62           | IFR ASSIGN operation_int COL
   63           | IFR ASSIGN operation_float COL

   64 asignation_function: IFR ASSIGN value
   65                    | IFR ASSIGN boolean
   66                    | IFR ASSIGN operation_int_exp
   67                    | IFR ASSIGN operation_float_exp

   68 operation_int: operation_int_exp
   69              | operation_int operation_int_exp
   70              | operation_int PLUS DIG
   71              | operation_int MINUS DIG
   72              | operation_int MULT DIG
   73              | operation_int DIV DIG

   74 operation_int_exp: DIG PLUS DIG
   75                  | DIG MINUS DIG
   76                  | DIG MULT DIG
   77                  | DIG MOD DIG
   78                  | DIG DIV DIG
   79                  | DIG DIG PLUS
   80                  | DIG DIG MINUS
   81                  | DIG DIG MULT
   82                  | DIG DIG MOD
   83                  | DIG DIG DIV

   84 operation_float: operation_float_exp
   85                | operation_float operation_float_exp
   86                | operation_float PLUS FLT
   87                | operation_float MINUS FLT
   88                | operation_float MULT FLT
   89                | operation_float DIV FLT

   90 operation_float_exp: FLT PLUS FLT
   91                    | FLT MINUS FLT
   92                    | FLT MULT FLT
   93                    | FLT DIV FLT
   94                    | FLT MOD FLT
   95                    | FLT FLT PLUS
   96                    | FLT FLT MINUS
   97                    | FLT FLT MULT
   98                    | FLT FLT MOD
   99                    | FLT FLT DIV

  100 condition: value EQ value
  101          | boolean EQ boolean
  102          | value DIFF value
  103          | boolean DIFF boolean
  104          | value LT value
  105          | value GT value
  106          | value LEQ value
  107          | value GEQ value
  108          | IFR EQ value
  109          | IFR EQ IFR
  110          | IFR LT value
  111          | IFR GT value
  112          | IFR LEQ value
  113          | IFR GEQ value
  114          | IFR LT IFR
  115          | IFR GT IFR
  116          | IFR LEQ IFR
  117          | IFR GEQ IFR

  118 conditioncomp: condition AND condition
  119              | condition OR condition
  120              | NOT LPAREN condition RPAREN AND condition
  121              | condition AND NOT LPAREN condition RPAREN
  122              | NOT LPAREN condition RPAREN OR condition
  123              | condition OR NOT LPAREN condition RPAREN

  124 ifcondition: LPAREN condition RPAREN
  125            | LPAREN conditioncomp RPAREN
  126            | LPAREN boolean RPAREN

  127 body: LBRACE bodies RBRACE

  128 bodies: body_stmt bodies
  129       | body_stmt

  130 body_stmt: RET value COL
  131          | KAERB COL
  132          | if
  133          | while
  134          | do-while
  135          | for
  136          | switch
  137          | try-catch
  138          | function
  139          | initialization

  140 elsebody: LBRACE RET value COL RBRACE
  141         | LBRACE KAERB COL RBRACE

  142 if: TIF ifcondition body EIF
  143   | TIF ifcondition body EIF ELSE elsebody

  144 whilecondition: LPAREN condition RPAREN
  145               | LPAREN conditioncomp RPAREN
  146               | LPAREN boolean RPAREN

  147 while: WHILE whilecondition body EWHILE

  148 do-while: DWHILE body while

  149 for: FOR LPAREN INT IFR ASSIGN DIG COL condition COL for_asignation COL RPAREN body EFOR
  150    | FOR LPAREN DEC IFR ASSIGN FLT COL condition COL asignation RPAREN LBRACE body RBRACE EFOR

  151 for_asignation: IFR PLUS PLUS
  152               | IFR MINUS MINUS

  153 switch: SWTC LPAREN IFR RPAREN LBRACE cases RBRACE

  154 cases: case
  155      | cases case

  156 case: ESAC value COLON body KAERB COL
  157     | DEF COLON body COL

  158 try-catch: YRT body HCTAC LPAREN IFR RPAREN body

  159 function: FUNCTION IFR LPAREN parameters RPAREN body
  160         | FUNCTION IFR LPAREN RPAREN body

  161 parameters: IFR
  162           | asignation_function
  163           | parameters COMMA IFR
  164           | parameters COMMA asignation_function


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DIG <intval> (258) 21 31 32 37 38 39 40 47 48 50 58 70 71 72 73 74 75 76 77 78 79 80 81 82 83 149
    IFR <strval> (259) 31 32 33 34 35 36 37 38 39 40 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 108 109 110 111 112 113 114 115 116 117 149 150 151 152 153 158 159 160 161 163
    STG <strval> (260) 49 56
    FLT <floatval> (261) 22 51 59 86 87 88 89 90 91 92 93 94 95 96 97 98 99 150
    PLUS (262) 26 70 74 79 86 90 95 151
    MINUS (263) 27 71 75 80 87 91 96 152
    LBRACKET (264) 31 32 37 38 39 40 47 48
    RBRACKET (265) 31 32 37 38 39 40 47 48
    SUM (266) 33 37
    PROD (267) 34 38
    MAX (268) 35 39
    MIN (269) 36 40
    MULT (270) 28 72 76 81 88 92 97
    DIV (271) 29 73 78 83 89 93 99
    TRUE (272) 41 52 60
    FALSE (273) 42 53 61
    STR (274) 43 49
    INT (275) 44 50 54 149
    DEC (276) 45 47 48 51 55 150
    BOOLEAN (277) 46 52 53
    DWHILE (278) 148
    WHILE (279) 147
    EWHILE (280) 147
    FOR (281) 149 150
    EFOR (282) 149 150
    TIF (283) 142 143
    EIF (284) 142 143
    ELSE (285) 143
    FUNCTION (286) 159 160
    RET (287) 130 140
    SWTC (288) 153
    ESAC (289) 156
    KAERB (290) 131 141 156
    DEF (291) 157
    YRT (292) 158
    HCTAC (293) 158
    ASSIGN (294) 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 149 150
    EQ (295) 100 101 108 109
    DIFF (296) 102 103
    LT (297) 104 110 114
    GT (298) 105 111 115
    LEQ (299) 106 112 116
    GEQ (300) 107 113 117
    AND (301) 118 120 121
    NOT (302) 120 121 122 123
    OR (303) 119 122 123
    MOD (304) 30 77 82 94 98
    LPAREN (305) 25 33 34 35 36 37 38 39 40 120 121 122 123 124 125 126 144 145 146 149 150 153 158 159 160
    RPAREN (306) 25 33 34 35 36 37 38 39 40 120 121 122 123 124 125 126 144 145 146 149 150 153 158 159 160
    LBRACE (307) 127 140 141 150 153
    RBRACE (308) 127 140 141 150 153
    COL (309) 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 130 131 140 141 149 150 156 157
    COLON (310) 156 157
    COMMA (311) 163 164


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 0 11 12 13 14 15 16 17 18 19 20
    value <floatval> (59)
        on left: 21 22 23 24 25 26 27 28 29 30
        on right: 25 26 27 28 29 30 64 100 102 104 105 106 107 108 110 111 112 113 130 140 156
    element <floatval> (60)
        on left: 31 32
        on right: 24 57
    reduction <floatval> (61)
        on left: 33 34 35 36 37 38 39 40
        on right: 23
    boolean (62)
        on left: 41 42
        on right: 65 101 103 126 146
    declaration (63)
        on left: 43 44 45 46 47 48
        on right: 1 11
    initialization (64)
        on left: 49 50 51 52 53 54 55
        on right: 2 12 139
    asignation (65)
        on left: 56 57 58 59 60 61 62 63
        on right: 3 13 150
    asignation_function (66)
        on left: 64 65 66 67
        on right: 162 164
    operation_int <intval> (67)
        on left: 68 69 70 71 72 73
        on right: 54 62 69 70 71 72 73
    operation_int_exp <intval> (68)
        on left: 74 75 76 77 78 79 80 81 82 83
        on right: 66 68 69
    operation_float <floatval> (69)
        on left: 84 85 86 87 88 89
        on right: 55 63 85 86 87 88 89
    operation_float_exp <floatval> (70)
        on left: 90 91 92 93 94 95 96 97 98 99
        on right: 67 84 85
    condition (71)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117
        on right: 118 119 120 121 122 123 124 144 149 150
    conditioncomp (72)
        on left: 118 119 120 121 122 123
        on right: 125 145
    ifcondition (73)
        on left: 124 125 126
        on right: 142 143
    body (74)
        on left: 127
        on right: 142 143 147 148 149 150 156 157 158 159 160
    bodies (75)
        on left: 128 129
        on right: 127 128
    body_stmt (76)
        on left: 130 131 132 133 134 135 136 137 138 139
        on right: 128 129
    elsebody (77)
        on left: 140 141
        on right: 143
    if (78)
        on left: 142 143
        on right: 4 14 132
    whilecondition (79)
        on left: 144 145 146
        on right: 147
    while (80)
        on left: 147
        on right: 5 15 133 148
    do-while (81)
        on left: 148
        on right: 6 16 134
    for (82)
        on left: 149 150
        on right: 7 17 135
    for_asignation (83)
        on left: 151 152
        on right: 149
    switch (84)
        on left: 153
        on right: 8 18 136
    cases (85)
        on left: 154 155
        on right: 153 155
    case (86)
        on left: 156 157
        on right: 154 155
    try-catch (87)
        on left: 158
        on right: 9 19 137
    function (88)
        on left: 159 160
        on right: 10 20 138
    parameters (89)
        on left: 161 162 163 164
        on right: 159 163 164


State 0

    0 $accept: . program $end

    IFR       shift, and go to state 1
    STR       shift, and go to state 2
    INT       shift, and go to state 3
    DEC       shift, and go to state 4
    BOOLEAN   shift, and go to state 5
    DWHILE    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    TIF       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SWTC      shift, and go to state 11
    YRT       shift, and go to state 12

    program         go to state 13
    declaration     go to state 14
    initialization  go to state 15
    asignation      go to state 16
    if              go to state 17
    while           go to state 18
    do-while        go to state 19
    for             go to state 20
    switch          go to state 21
    try-catch       go to state 22
    function        go to state 23


State 1

   56 asignation: IFR . ASSIGN STG COL
   57           | IFR . ASSIGN element COL
   58           | IFR . ASSIGN DIG COL
   59           | IFR . ASSIGN FLT COL
   60           | IFR . ASSIGN TRUE COL
   61           | IFR . ASSIGN FALSE COL
   62           | IFR . ASSIGN operation_int COL
   63           | IFR . ASSIGN operation_float COL

    ASSIGN  shift, and go to state 24


State 2

   43 declaration: STR . IFR COL
   49 initialization: STR . IFR ASSIGN STG COL

    IFR  shift, and go to state 25


State 3

   44 declaration: INT . IFR COL
   50 initialization: INT . IFR ASSIGN DIG COL
   54               | INT . IFR ASSIGN operation_int COL

    IFR  shift, and go to state 26


State 4

   45 declaration: DEC . IFR COL
   47            | DEC . IFR LBRACKET DIG RBRACKET COL
   48            | DEC . IFR LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET COL
   51 initialization: DEC . IFR ASSIGN FLT COL
   55               | DEC . IFR ASSIGN operation_float COL

    IFR  shift, and go to state 27


State 5

   46 declaration: BOOLEAN . IFR COL
   52 initialization: BOOLEAN . IFR ASSIGN TRUE COL
   53               | BOOLEAN . IFR ASSIGN FALSE COL

    IFR  shift, and go to state 28


State 6

  148 do-while: DWHILE . body while

    LBRACE  shift, and go to state 29

    body  go to state 30


State 7

  147 while: WHILE . whilecondition body EWHILE

    LPAREN  shift, and go to state 31

    whilecondition  go to state 32


State 8

  149 for: FOR . LPAREN INT IFR ASSIGN DIG COL condition COL for_asignation COL RPAREN body EFOR
  150    | FOR . LPAREN DEC IFR ASSIGN FLT COL condition COL asignation RPAREN LBRACE body RBRACE EFOR

    LPAREN  shift, and go to state 33


State 9

  142 if: TIF . ifcondition body EIF
  143   | TIF . ifcondition body EIF ELSE elsebody

    LPAREN  shift, and go to state 34

    ifcondition  go to state 35


State 10

  159 function: FUNCTION . IFR LPAREN parameters RPAREN body
  160         | FUNCTION . IFR LPAREN RPAREN body

    IFR  shift, and go to state 36


State 11

  153 switch: SWTC . LPAREN IFR RPAREN LBRACE cases RBRACE

    LPAREN  shift, and go to state 37


State 12

  158 try-catch: YRT . body HCTAC LPAREN IFR RPAREN body

    LBRACE  shift, and go to state 29

    body  go to state 38


State 13

    0 $accept: program . $end
   11 program: program . declaration
   12        | program . initialization
   13        | program . asignation
   14        | program . if
   15        | program . while
   16        | program . do-while
   17        | program . for
   18        | program . switch
   19        | program . try-catch
   20        | program . function

    $end      shift, and go to state 39
    IFR       shift, and go to state 1
    STR       shift, and go to state 2
    INT       shift, and go to state 3
    DEC       shift, and go to state 4
    BOOLEAN   shift, and go to state 5
    DWHILE    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    TIF       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    SWTC      shift, and go to state 11
    YRT       shift, and go to state 12

    declaration     go to state 40
    initialization  go to state 41
    asignation      go to state 42
    if              go to state 43
    while           go to state 44
    do-while        go to state 45
    for             go to state 46
    switch          go to state 47
    try-catch       go to state 48
    function        go to state 49


State 14

    1 program: declaration .

    $default  reduce using rule 1 (program)


State 15

    2 program: initialization .

    $default  reduce using rule 2 (program)


State 16

    3 program: asignation .

    $default  reduce using rule 3 (program)


State 17

    4 program: if .

    $default  reduce using rule 4 (program)


State 18

    5 program: while .

    $default  reduce using rule 5 (program)


State 19

    6 program: do-while .

    $default  reduce using rule 6 (program)


State 20

    7 program: for .

    $default  reduce using rule 7 (program)


State 21

    8 program: switch .

    $default  reduce using rule 8 (program)


State 22

    9 program: try-catch .

    $default  reduce using rule 9 (program)


State 23

   10 program: function .

    $default  reduce using rule 10 (program)


State 24

   56 asignation: IFR ASSIGN . STG COL
   57           | IFR ASSIGN . element COL
   58           | IFR ASSIGN . DIG COL
   59           | IFR ASSIGN . FLT COL
   60           | IFR ASSIGN . TRUE COL
   61           | IFR ASSIGN . FALSE COL
   62           | IFR ASSIGN . operation_int COL
   63           | IFR ASSIGN . operation_float COL

    DIG    shift, and go to state 50
    IFR    shift, and go to state 51
    STG    shift, and go to state 52
    FLT    shift, and go to state 53
    TRUE   shift, and go to state 54
    FALSE  shift, and go to state 55

    element              go to state 56
    operation_int        go to state 57
    operation_int_exp    go to state 58
    operation_float      go to state 59
    operation_float_exp  go to state 60


State 25

   43 declaration: STR IFR . COL
   49 initialization: STR IFR . ASSIGN STG COL

    ASSIGN  shift, and go to state 61
    COL     shift, and go to state 62


State 26

   44 declaration: INT IFR . COL
   50 initialization: INT IFR . ASSIGN DIG COL
   54               | INT IFR . ASSIGN operation_int COL

    ASSIGN  shift, and go to state 63
    COL     shift, and go to state 64


State 27

   45 declaration: DEC IFR . COL
   47            | DEC IFR . LBRACKET DIG RBRACKET COL
   48            | DEC IFR . LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET COL
   51 initialization: DEC IFR . ASSIGN FLT COL
   55               | DEC IFR . ASSIGN operation_float COL

    LBRACKET  shift, and go to state 65
    ASSIGN    shift, and go to state 66
    COL       shift, and go to state 67


State 28

   46 declaration: BOOLEAN IFR . COL
   52 initialization: BOOLEAN IFR . ASSIGN TRUE COL
   53               | BOOLEAN IFR . ASSIGN FALSE COL

    ASSIGN  shift, and go to state 68
    COL     shift, and go to state 69


State 29

  127 body: LBRACE . bodies RBRACE

    STR       shift, and go to state 70
    INT       shift, and go to state 71
    DEC       shift, and go to state 72
    BOOLEAN   shift, and go to state 73
    DWHILE    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    TIF       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    RET       shift, and go to state 74
    SWTC      shift, and go to state 11
    KAERB     shift, and go to state 75
    YRT       shift, and go to state 12

    initialization  go to state 76
    bodies          go to state 77
    body_stmt       go to state 78
    if              go to state 79
    while           go to state 80
    do-while        go to state 81
    for             go to state 82
    switch          go to state 83
    try-catch       go to state 84
    function        go to state 85


State 30

  148 do-while: DWHILE body . while

    WHILE  shift, and go to state 7

    while  go to state 86


State 31

  144 whilecondition: LPAREN . condition RPAREN
  145               | LPAREN . conditioncomp RPAREN
  146               | LPAREN . boolean RPAREN

    DIG     shift, and go to state 87
    IFR     shift, and go to state 88
    FLT     shift, and go to state 89
    SUM     shift, and go to state 90
    PROD    shift, and go to state 91
    MAX     shift, and go to state 92
    MIN     shift, and go to state 93
    TRUE    shift, and go to state 94
    FALSE   shift, and go to state 95
    NOT     shift, and go to state 96
    LPAREN  shift, and go to state 97

    value          go to state 98
    element        go to state 99
    reduction      go to state 100
    boolean        go to state 101
    condition      go to state 102
    conditioncomp  go to state 103


State 32

  147 while: WHILE whilecondition . body EWHILE

    LBRACE  shift, and go to state 29

    body  go to state 104


State 33

  149 for: FOR LPAREN . INT IFR ASSIGN DIG COL condition COL for_asignation COL RPAREN body EFOR
  150    | FOR LPAREN . DEC IFR ASSIGN FLT COL condition COL asignation RPAREN LBRACE body RBRACE EFOR

    INT  shift, and go to state 105
    DEC  shift, and go to state 106


State 34

  124 ifcondition: LPAREN . condition RPAREN
  125            | LPAREN . conditioncomp RPAREN
  126            | LPAREN . boolean RPAREN

    DIG     shift, and go to state 87
    IFR     shift, and go to state 88
    FLT     shift, and go to state 89
    SUM     shift, and go to state 90
    PROD    shift, and go to state 91
    MAX     shift, and go to state 92
    MIN     shift, and go to state 93
    TRUE    shift, and go to state 94
    FALSE   shift, and go to state 95
    NOT     shift, and go to state 96
    LPAREN  shift, and go to state 97

    value          go to state 98
    element        go to state 99
    reduction      go to state 100
    boolean        go to state 107
    condition      go to state 108
    conditioncomp  go to state 109


State 35

  142 if: TIF ifcondition . body EIF
  143   | TIF ifcondition . body EIF ELSE elsebody

    LBRACE  shift, and go to state 29

    body  go to state 110


State 36

  159 function: FUNCTION IFR . LPAREN parameters RPAREN body
  160         | FUNCTION IFR . LPAREN RPAREN body

    LPAREN  shift, and go to state 111


State 37

  153 switch: SWTC LPAREN . IFR RPAREN LBRACE cases RBRACE

    IFR  shift, and go to state 112


State 38

  158 try-catch: YRT body . HCTAC LPAREN IFR RPAREN body

    HCTAC  shift, and go to state 113


State 39

    0 $accept: program $end .

    $default  accept


State 40

   11 program: program declaration .

    $default  reduce using rule 11 (program)


State 41

   12 program: program initialization .

    $default  reduce using rule 12 (program)


State 42

   13 program: program asignation .

    $default  reduce using rule 13 (program)


State 43

   14 program: program if .

    $default  reduce using rule 14 (program)


State 44

   15 program: program while .

    $default  reduce using rule 15 (program)


State 45

   16 program: program do-while .

    $default  reduce using rule 16 (program)


State 46

   17 program: program for .

    $default  reduce using rule 17 (program)


State 47

   18 program: program switch .

    $default  reduce using rule 18 (program)


State 48

   19 program: program try-catch .

    $default  reduce using rule 19 (program)


State 49

   20 program: program function .

    $default  reduce using rule 20 (program)


State 50

   58 asignation: IFR ASSIGN DIG . COL
   74 operation_int_exp: DIG . PLUS DIG
   75                  | DIG . MINUS DIG
   76                  | DIG . MULT DIG
   77                  | DIG . MOD DIG
   78                  | DIG . DIV DIG
   79                  | DIG . DIG PLUS
   80                  | DIG . DIG MINUS
   81                  | DIG . DIG MULT
   82                  | DIG . DIG MOD
   83                  | DIG . DIG DIV

    DIG    shift, and go to state 114
    PLUS   shift, and go to state 115
    MINUS  shift, and go to state 116
    MULT   shift, and go to state 117
    DIV    shift, and go to state 118
    MOD    shift, and go to state 119
    COL    shift, and go to state 120


State 51

   31 element: IFR . LBRACKET DIG RBRACKET
   32        | IFR . LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET

    LBRACKET  shift, and go to state 121


State 52

   56 asignation: IFR ASSIGN STG . COL

    COL  shift, and go to state 122


State 53

   59 asignation: IFR ASSIGN FLT . COL
   90 operation_float_exp: FLT . PLUS FLT
   91                    | FLT . MINUS FLT
   92                    | FLT . MULT FLT
   93                    | FLT . DIV FLT
   94                    | FLT . MOD FLT
   95                    | FLT . FLT PLUS
   96                    | FLT . FLT MINUS
   97                    | FLT . FLT MULT
   98                    | FLT . FLT MOD
   99                    | FLT . FLT DIV

    FLT    shift, and go to state 123
    PLUS   shift, and go to state 124
    MINUS  shift, and go to state 125
    MULT   shift, and go to state 126
    DIV    shift, and go to state 127
    MOD    shift, and go to state 128
    COL    shift, and go to state 129


State 54

   60 asignation: IFR ASSIGN TRUE . COL

    COL  shift, and go to state 130


State 55

   61 asignation: IFR ASSIGN FALSE . COL

    COL  shift, and go to state 131


State 56

   57 asignation: IFR ASSIGN element . COL

    COL  shift, and go to state 132


State 57

   62 asignation: IFR ASSIGN operation_int . COL
   69 operation_int: operation_int . operation_int_exp
   70              | operation_int . PLUS DIG
   71              | operation_int . MINUS DIG
   72              | operation_int . MULT DIG
   73              | operation_int . DIV DIG

    DIG    shift, and go to state 133
    PLUS   shift, and go to state 134
    MINUS  shift, and go to state 135
    MULT   shift, and go to state 136
    DIV    shift, and go to state 137
    COL    shift, and go to state 138

    operation_int_exp  go to state 139


State 58

   68 operation_int: operation_int_exp .

    $default  reduce using rule 68 (operation_int)


State 59

   63 asignation: IFR ASSIGN operation_float . COL
   85 operation_float: operation_float . operation_float_exp
   86                | operation_float . PLUS FLT
   87                | operation_float . MINUS FLT
   88                | operation_float . MULT FLT
   89                | operation_float . DIV FLT

    FLT    shift, and go to state 140
    PLUS   shift, and go to state 141
    MINUS  shift, and go to state 142
    MULT   shift, and go to state 143
    DIV    shift, and go to state 144
    COL    shift, and go to state 145

    operation_float_exp  go to state 146


State 60

   84 operation_float: operation_float_exp .

    $default  reduce using rule 84 (operation_float)


State 61

   49 initialization: STR IFR ASSIGN . STG COL

    STG  shift, and go to state 147


State 62

   43 declaration: STR IFR COL .

    $default  reduce using rule 43 (declaration)


State 63

   50 initialization: INT IFR ASSIGN . DIG COL
   54               | INT IFR ASSIGN . operation_int COL

    DIG  shift, and go to state 148

    operation_int      go to state 149
    operation_int_exp  go to state 58


State 64

   44 declaration: INT IFR COL .

    $default  reduce using rule 44 (declaration)


State 65

   47 declaration: DEC IFR LBRACKET . DIG RBRACKET COL
   48            | DEC IFR LBRACKET . DIG RBRACKET LBRACKET DIG RBRACKET COL

    DIG  shift, and go to state 150


State 66

   51 initialization: DEC IFR ASSIGN . FLT COL
   55               | DEC IFR ASSIGN . operation_float COL

    FLT  shift, and go to state 151

    operation_float      go to state 152
    operation_float_exp  go to state 60


State 67

   45 declaration: DEC IFR COL .

    $default  reduce using rule 45 (declaration)


State 68

   52 initialization: BOOLEAN IFR ASSIGN . TRUE COL
   53               | BOOLEAN IFR ASSIGN . FALSE COL

    TRUE   shift, and go to state 153
    FALSE  shift, and go to state 154


State 69

   46 declaration: BOOLEAN IFR COL .

    $default  reduce using rule 46 (declaration)


State 70

   49 initialization: STR . IFR ASSIGN STG COL

    IFR  shift, and go to state 155


State 71

   50 initialization: INT . IFR ASSIGN DIG COL
   54               | INT . IFR ASSIGN operation_int COL

    IFR  shift, and go to state 156


State 72

   51 initialization: DEC . IFR ASSIGN FLT COL
   55               | DEC . IFR ASSIGN operation_float COL

    IFR  shift, and go to state 157


State 73

   52 initialization: BOOLEAN . IFR ASSIGN TRUE COL
   53               | BOOLEAN . IFR ASSIGN FALSE COL

    IFR  shift, and go to state 158


State 74

  130 body_stmt: RET . value COL

    DIG     shift, and go to state 87
    IFR     shift, and go to state 51
    FLT     shift, and go to state 89
    SUM     shift, and go to state 90
    PROD    shift, and go to state 91
    MAX     shift, and go to state 92
    MIN     shift, and go to state 93
    LPAREN  shift, and go to state 97

    value      go to state 159
    element    go to state 99
    reduction  go to state 100


State 75

  131 body_stmt: KAERB . COL

    COL  shift, and go to state 160


State 76

  139 body_stmt: initialization .

    $default  reduce using rule 139 (body_stmt)


State 77

  127 body: LBRACE bodies . RBRACE

    RBRACE  shift, and go to state 161


State 78

  128 bodies: body_stmt . bodies
  129       | body_stmt .

    STR       shift, and go to state 70
    INT       shift, and go to state 71
    DEC       shift, and go to state 72
    BOOLEAN   shift, and go to state 73
    DWHILE    shift, and go to state 6
    WHILE     shift, and go to state 7
    FOR       shift, and go to state 8
    TIF       shift, and go to state 9
    FUNCTION  shift, and go to state 10
    RET       shift, and go to state 74
    SWTC      shift, and go to state 11
    KAERB     shift, and go to state 75
    YRT       shift, and go to state 12

    $default  reduce using rule 129 (bodies)

    initialization  go to state 76
    bodies          go to state 162
    body_stmt       go to state 78
    if              go to state 79
    while           go to state 80
    do-while        go to state 81
    for             go to state 82
    switch          go to state 83
    try-catch       go to state 84
    function        go to state 85


State 79

  132 body_stmt: if .

    $default  reduce using rule 132 (body_stmt)


State 80

  133 body_stmt: while .

    $default  reduce using rule 133 (body_stmt)


State 81

  134 body_stmt: do-while .

    $default  reduce using rule 134 (body_stmt)


State 82

  135 body_stmt: for .

    $default  reduce using rule 135 (body_stmt)


State 83

  136 body_stmt: switch .

    $default  reduce using rule 136 (body_stmt)


State 84

  137 body_stmt: try-catch .

    $default  reduce using rule 137 (body_stmt)


State 85

  138 body_stmt: function .

    $default  reduce using rule 138 (body_stmt)


State 86

  148 do-while: DWHILE body while .

    $default  reduce using rule 148 (do-while)


State 87

   21 value: DIG .

    $default  reduce using rule 21 (value)


State 88

   31 element: IFR . LBRACKET DIG RBRACKET
   32        | IFR . LBRACKET DIG RBRACKET LBRACKET DIG RBRACKET
  108 condition: IFR . EQ value
  109          | IFR . EQ IFR
  110          | IFR . LT value
  111          | IFR . GT value
  112          | IFR . LEQ value
  113          | IFR . GEQ value
  114          | IFR . LT IFR
  115          | IFR . GT IFR
  116          | IFR . LEQ IFR
  117          | IFR . GEQ IFR

    LBRACKET  shift, and go to state 121
    EQ        shift, and go to state 163
    LT        shift, and go to state 164
    GT        shift, and go to state 165
    LEQ       shift, and go to state 166
    GEQ       shift, and go to state 167


State 89

   22 value: FLT .

    $default  reduce using rule 22 (value)


State 90

   33 reduction: SUM . LPAREN IFR RPAREN
   37          | SUM . LPAREN IFR LBRACKET DIG RBRACKET RPAREN

    LPAREN  shift, and go to state 168


State 91

   34 reduction: PROD . LPAREN IFR RPAREN
   38          | PROD . LPAREN IFR LBRACKET DIG RBRACKET RPAREN

    LPAREN  shift, and go to state 169


State 92

   35 reduction: MAX . LPAREN IFR RPAREN
   39          | MAX . LPAREN IFR LBRACKET DIG RBRACKET RPAREN

    LPAREN  shift, and go to state 170


State 93

   36 reduction: MIN . LPAREN IFR RPAREN
   40          | MIN . LPAREN IFR LBRACKET DIG RBRACKET RPAREN

    LPAREN  shift, and go to state 171


State 94

   41 boolean: TRUE .

    $default  reduce using rule 41 (boolean)


State 95

   42 boolean: FALSE .

    $default  reduce using rule 42 (boolean)


State 96

  120 conditioncomp: NOT . LPAREN condition RPAREN AND condition
  122              | NOT . LPAREN condition RPAREN OR condition

    LPAREN  shift, and go to state 172


State 97

   25 value: LPAREN . value RPAREN

    DIG     shift, and go to state 87
    IFR     shift, and go to state 51
    FLT     shift, and go to state 89
    SUM     shift, and go to state 90
    PROD    shift, and go to state 91
    MAX     shift, and go to state 92
    MIN     shift, and go to state 93
    LPAREN  shift, and go to state 97

    value      go to state 173
    element    go to state 99
    reduction  go to state 100


State 98

   26 value: value . PLUS value
   27      | value . MINUS value
   28      | value . MULT value
   29      | value . DIV value
   30      | value . MOD value
  100 condition: value . EQ value
  102          | value . DIFF value
  104          | value . LT value
  105          | value . GT value
  106          | value . LEQ value
  107          | value . GEQ value

    PLUS   shift, and go to state 174
    MINUS  shift, and go to state 175
    MULT   shift, and go to state 176
    DIV    shift, and go to state 177
    EQ     shift, and go to state 178
    DIFF   shift, and go to state 179
    LT     shift, and go to state 180
    GT     shift, and go to state 181
    LEQ    shift, and go to state 182
    GEQ    shift, and go to state 183
    MOD    shift, and go to state 184


State 99

   24 value: element .

    $default  reduce using rule 24 (value)


State 100

   23 value: reduction .

    $default  reduce using rule 23 (value)


State 101

  101 condition: boolean . EQ boolean
  103          | boolean . DIFF boolean
  146 whilecondition: LPAREN boolean . RPAREN

    EQ      shift, and go to state 185
    DIFF    shift, and go to state 186
    RPAREN  shift, and go to state 187


State 102

  118 conditioncomp: condition . AND condition
  119              | condition . OR condition
  121              | condition . AND NOT LPAREN condition RPAREN
  123              | condition . OR NOT LPAREN condition RPAREN
  144 whilecondition: LPAREN condition . RPAREN

    AND     shift, and go to state 188
    OR      shift, and go to state 189
    RPAREN  shift, and go to state 190


State 103

  145 whilecondition: LPAREN conditioncomp . RPAREN
